create profile readable size font

--- a/client/views/profiles/profiles-new.jade
+++ b/client/views/profiles/profiles-new.jade
@@ -1,5 +1,5 @@
 h3.text-center DEVELOPER PROFILE
-.container
+.container#devProfile
   .row
     .col-xs-10.col-xs-offset-1
       h4.text-center: i.fa.fa-user-plus &nbsp; BASIC INFO
