--- a/client/views/profiles/profiles.less
+++ b/client/views/profiles/profiles.less
@@ -277,6 +277,14 @@ h5.bio {
   font-size: 3em;
 }
 
-#listProfiles {
-
+#devProfile{
+  font-size: 22px;
+  h6 {
+    font-size: 18px;
+  }
+  button#createStudent{
+    background-color: @freeze-dk-blue;
+    border: 2px @freeze-dk-blue solid;
+    color: white;
+  }
 }
